# codekakuyo

./: README.md  aaa  aaa.hi  aaa.hs
alkadai/: 5-1kadai.rb  5-2.cpp  a.out
bc/ethereum/: Remixmemo.md  financial.md  memo.md  ropstenmemo.md
preuler/: CHANGELOG.md  LICENSE  gcc-ghcerror.md  preuler.cabal
preuler/dist-newstyle/cache/: compiler  config
preuler/matomeruyo/: matome.md  matome1.md  matome2.md
preuler/matomeruyo/hsmatomeru/: README.md
preuler/matomeruyo/hsmatomeru/matome1/: product.hs
preuler/matomeruyo/hsmatomeru/matome2/: calc.hs  matome2.md  test.hs
preuler/matomeruyo/hsmatomeru/matome3/: matome3.md  rex3.hs
preuler/matomeruyo/hsmatomeru/matome4/: matome4.md  rex4.hs
preuler/matomeruyo/hsmatomeru/matome5/: .gitignore  era.hs  matome5.md  rex5.hs
preuler/matomeruyo/hsmatomeru/matome6/: .gitignore  matome6  matome6.md  rex6.hi  rex6.hs
preuler/matomeruyo/math/: link.md
preuler/t-1/: 1  1.hi  1.hs  hello  hello.hi  hello.hs
preuler/t-2/: t-2.hs
preuler/t-6/: 6  6.hi  6.hs
ruby-kadai/: q.html  rubyinstall.md
ruby-kadai/11/: 11.rb  kazu.txt
ruby-kadai/12/: 12.rb  222.rb
ruby-kadai/14/: a.ruby  aaa.txt
ruby-kadai/15/: .gitignore
ruby-kadai/5/1/: 5-1kadai.rb
ruby-kadai/7/: 7-3.rb
ruby-kadai/atcoder/practice/: abc081a.rb  abc081b.rb  abc086a.rb  practice.rb
ruby-kadai/sw2021/8/: 8.rb  calc.rb  names.db
sete-ubuntu/: README.md  saisho.sh
stdy-ts/: 1-1.ts  1-2.ts  README.md
stdy-ts/js/: SamplePromiseMethodChain.js
stdy-ts/js/hid/: Promisememo.md  SamplePromise.js  SamplePromiseMethodChain.js  SamplePromiseall.js  (+5 more)
(+2 files in other folders)
