cabal-version:      3.0
name:               preuler
version:            0.1.0.0
synopsis:           kakudake

-- A longer description of the package.
-- description:
homepage:           https://github.com/HiBjhs/codekakuyo/tree/main/preuler

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             HiBjhs
maintainer:         1911140011x@ed.fuk.kindai.ac.jp

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable preuler
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.0.0,
        preuler

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010
